feat(user): complete CRUD (get, update, delete with soft delete) endpoints